navigation spacing fix

--- a/scss/parts/_navigation2.scss
+++ b/scss/parts/_navigation2.scss
@@ -43,6 +43,14 @@
   .dashboard-navBar {
     padding: 0 8vw;
   }
+
+  .hamburger-menu {
+    top: 60px;
+
+    a { 
+      margin: 0;
+    }
+  }
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
